stats are now in a table so the can be aligned properly and no radio button checked fixed

--- a/styles.css
+++ b/styles.css
@@ -579,6 +579,12 @@ im touching stuff
 
 
 
+
+.table_right
+{
+    text-align:right;
+}
+
 /* ============================
 Section: Pop ups/ Post its   
 ============================ */
